--- a/ploting.ipynb
+++ b/ploting.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 123,
    "id": "059a49f7",
    "metadata": {},
    "outputs": [
@@ -130,13 +130,13 @@
     "plt.title('Defect Severity by Condition and Line (N=1)')\n",
     "plt.legend()\n",
     "plt.tight_layout()\n",
-    "plt.savefig('defect_severity_barplot.png', dpi=600)\n",
+    "plt.savefig('Plots/defect_severity_barplot.png', dpi=600)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "fb184ca4",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
     "    plt.xticks(value_cols)\n",
     "    plt.legend(title=\"Line\")\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'severity_profile_{cond}.png', dpi=600)\n",
+    "    plt.savefig(f'Plots/severity_profile_{cond}.png', dpi=600)\n",
     "    plt.show()\n"
    ]
   },
